# kalshi_market_data

./: .gitignore  Cargo.toml  README.md
examples/: websocket_stream.rs
examples/configs/: demo.1.toml
examples/websocket_stream_configs/: demo.1.toml  prod.1.toml
src/: lib.rs  serializers.rs
src/rest/: error.rs  event.rs  exchange.rs  history.rs  lib.rs  login.rs  logout.rs  market.rs  mod.rs  orderbook.rs  series.rs  trade.rs
src/websocket/: commands.rs  fill.rs  lib.rs  mod.rs  orderbook.rs  ticker.rs  trade.rs
