[package]
name = "kalshi_market_data"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Connectors for market data on the Kalshi exchange"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive", "std"]  }
serde_json = { version = "1.0.91" }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls", "default", "handshake", "connect"] }
tungstenite = { version = "0.18.0" }
flume = { version = "0.10.14" }
chrono = { version = "0.4.23" }
reqwest = { version = "0.11.13" }
url = { version = "2.3.1" }
log = { version = "0.4.17" }
toml = { version = "0.5.10" }
futures = { version = "0.3.25" }
futures-util = { version = "0.3.25", features = ["sink"] }

[dev-dependencies]

[lib]
name = "kalshi_market_data"
path = "src/lib.rs"
test = false

[[example]]
name = "websocket_stream"
